# freesci

./: CLAUDE.md  CMakeLists.txt  MEMORY_GROWTH_CONSIDERATIONS.md
cmake/: config.h.in
src/: CMakeLists.txt  main.c
src/engine/: CMakeLists.txt  game.c  kernel.c  ksound.c  vm.c
src/gfx/: CMakeLists.txt  gfx_resource.c  gfx_support.c  gfx_tools.c  operations.c  resmgr.c
src/gfx/drivers/: CMakeLists.txt  gfx_drivers.c  pico_driver.c  sdl_driver.c
src/gfx/resource/: CMakeLists.txt  sci_pic_0.c  sci_picfill.c  sci_resmgr.c
src/include/: gfx_resmgr.h  gfx_resource.h  gfx_system.h  sciresource.h  vm.h
src/menu/: CMakeLists.txt
src/platform/pico/: CMakeLists.txt  dirent.h  fnmatch.h  hw_config.c  kbd_input.c  kbd_input.h  pico_io.c  pico_main.c  pico_sdcard.c  pico_sdcard.h  pico_time.c  psram_alloc.c  psram_alloc.h
src/platform/pico/audio/: pwm_synth.c
src/platform/pico/hw/lcdspi/: lcdspi.c
src/scicore/: CMakeLists.txt  decompress0.c  resource.c  sci_memory.c  script.c  tools.c  vocab_debug.c
src/sfx/: CMakeLists.txt  core.c
src/sfx/device/: CMakeLists.txt
src/sfx/mixer/: CMakeLists.txt
src/sfx/pcm_device/: CMakeLists.txt  sdl.c
src/sfx/player/: CMakeLists.txt
src/sfx/seq/: CMakeLists.txt
src/sfx/softseq/: CMakeLists.txt
src/sfx/timer/: CMakeLists.txt
